--- a/index.html
+++ b/index.html
@@ -731,6 +731,14 @@ h2 {
     width: 100%;
     font-size: 14px;
   }
+    
+    @media screen and (max-width: 768px) {
+  .pdf-link {
+    padding: 10px 6px;
+    font-size: 0.78em;
+    min-width: unset;
+  }
+}
 }
 /* =================================================
    フッター
