--- a/index.html
+++ b/index.html
@@ -739,6 +739,10 @@ h2 {
     min-width: unset;
      grid-template-columns: 1fr; 
   }
+        .self-buttons .pdf-link {
+    width: 100%;
+    padding: 14px 10px;
+    font-size: 0.85em;
 }
 }
 /* =================================================
