--- a/index.html
+++ b/index.html
@@ -738,6 +738,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr;
     gap: 12px;
+    align-items: center;
   }
 
   .self-buttons .pdf-link {
