--- a/index.html
+++ b/index.html
@@ -789,21 +789,18 @@ footer {
 }
 
 /* プライバシーポリシーリンク */
-.footer-privacy {
-  color: #aaa;
+.footer-privacy,
+.footer-privacy:link,
+.footer-privacy:visited {
+  color: #9F987D;
   text-decoration: none;
   font-size: 0.9em;
 }
 
-.footer-privacy:visited {
-  color: #9F987D;
-}
-
 .footer-privacy:hover {
-  color: #9F987D;
   text-decoration: underline;
 }
-  
+    
 @media (max-width: 768px) {
   body {
     background-attachment: scroll;
