--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ h2 {
 
 .self-buttons .pdf-link {
   width: 150px;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: auto;
   box-sizing: border-box;
   background: #ffffff;
   border-radius: 16px;
