--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ h2 {
 .contact-form {
   display: none;
   max-width: 900px;
-  margin: 0 auto 80px;
+  margin-bottom: 0;
   padding: 0 20px;
   background: rgba(255,255,255,0.75);
   border-radius: 15px;
@@ -663,7 +663,7 @@ h2 {
 ================================================= */
 .pdf-section {
   text-align: center;
-  margin: 40px 0 80px;
+  margin-bottom: 0;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
