--- a/index.html
+++ b/index.html
@@ -813,6 +813,20 @@ footer {
     width: 350px;   /* ← PCより短く */
   }
 }
+
+  html, body {
+  height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
   
 </style>
 </head>
