--- a/index.html
+++ b/index.html
@@ -414,7 +414,6 @@ h2 {
     font-size: 1.4em;
   }
 }
-  
 
 /* ===============================
    スマホだけトグル化
@@ -814,18 +813,8 @@ footer {
   }
 }
 
-  html, body {
-  height: 100%;
-}
-
-body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  margin-top: auto;
+  footer {
+  width: 100%;
 }
   
 </style>
