--- a/index.html
+++ b/index.html
@@ -717,6 +717,7 @@ h2 {
     opacity: 1 !important;
     transform: none !important;
     filter: none !important;
+    margin-bottom: 0;
   }
 }
   
@@ -813,8 +814,12 @@ footer {
   }
 }
 
-  footer {
-  width: 100%;
+body {
+  min-height: 100vh;
+}
+
+footer {
+  margin-bottom: 0;
 }
   
 </style>
