--- a/index.html
+++ b/index.html
@@ -736,6 +736,12 @@ h2 {
     padding: 18px 8px;
     font-size: 0.85em;
   }
+
+.contact-form,
+.pdf-section,
+.self-buttons {
+  margin-bottom: 0;
+ }
 }
 /* =================================================
    フッター
