--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ body {
   background-color: #fff;
   color: #9F987D;
   margin: 0;
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
    .background-image {
         position: fixed;
@@ -753,6 +757,7 @@ footer {
   font-family: 'Kiwi Maru', cursive;
   font-size: 1em;
   color: #aaa;
+  margin-top: auto;   /* ← これが超重要 */
 }
 
 /* 住所まわり */
@@ -818,14 +823,6 @@ footer {
   .pdf-title::before {
     width: 350px;   /* ← PCより短く */
   }
-}
-
-body {
-  min-height: 100vh;
-}
-
-footer {
-  margin-bottom: 0;
 }
   
 </style>
