--- a/index.html
+++ b/index.html
@@ -670,10 +670,14 @@ h2 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
+.pdf-section:last-of-type {
+  margin-top: 40px;
+}
+
 .self-buttons {
   display: grid;
-  grid-template-columns: repeat(5, 150px);
-  gap: 40px;
+  grid-template-columns: repeat(auto-fit, 200px);
+  gap: 50px;
   justify-content: center;
 }
 
