--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <style>
 /* ------------------ 共通 ------------------ */
-html { scroll-behavior: smooth; }
+/* ================= 基本設定 ================= */
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: 'Kiwi Maru', cursive;
@@ -24,19 +27,17 @@ body {
   display: flex;
   flex-direction: column;
 }
-   .background-image {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url("がぞー.png");
-        background-size: cover;
-        background-position: center;
-        z-index: -1; opacity: 0.5;
-      }
 
-/* ------------------ ヘッダー ------------------ */
+/* 背景画像 */
+.background-image {
+  position: fixed;
+  inset: 0;
+  background: url("がぞー.png") center / cover no-repeat;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+/* ================= ヘッダー ================= */
 header {
   background-color: rgba(169,169,169,0.5);
   padding: clamp(12px, 3vw, 32px) clamp(8px, 4vw, 24px);
@@ -46,81 +47,69 @@ header {
 }
 
 h2 {
-  scroll-margin-top: 120px; /* ヘッダー高さ分 */
+  scroll-margin-top: 120px;
 }
-  
+
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
+
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   column-gap: clamp(12px, 4vw, 40px);
 }
 
-/* ロゴ・メニュー文字 */
+/* ロゴ・メニュー文字共通 */
 .logo,
 .menu a {
   color: #fff;
-  font-family: 'Kiwi Maru', cursive;
-  white-space: nowrap;
   font-size: clamp(0.7rem, 2vw, 1rem);
+  white-space: nowrap;
+  text-decoration: none;
 }
 
-  @media (max-width: 480px) {
-  .logo,
-  .menu a {
-    max-width: 100%;
-  }
-}
-
+/* 中央タイトル */
 .header-center {
   text-align: center;
   font-weight: bold;
   color: #675340;
   letter-spacing: 0.15em;
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
-  max-width: 100%;
-  overflow: visible;
   white-space: nowrap;
-  
+
   font-size: clamp(1.1rem, 3vw, 1.8rem);
 }
-  
-@media (max-width: 1024px) {
-  .header-inner {
-    column-gap: 20px;
-    grid-template-columns: minmax(0, 1fr) auto;
-  }
-}
-  
-/* ===== メニュー ===== */
-.menu {
-  display: flex;               /* ← PCでは横並び */
-  justify-content: flex-end;
-  gap: 20px;
-}
 
-.menu a {
-  margin-left: 0;
-  text-decoration: none;
-  font-size: clamp(0.7rem, 2vw, 1rem);
-    white-space: nowrap;
+/* ================= メニュー（PC） ================= */
+.menu {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
 }
 
 .menu a:hover {
   opacity: 0.7;
 }
 
-/* ===== ハンバーガー ===== */
+/* ハンバーガーボタン（PC非表示） */
 .menu-toggle {
-  display: none;               /* PCでは非表示 */
+  display: none;
   font-size: 26px;
   background: none;
   border: none;
   color: #fff;
   cursor: pointer;
 }
+
+/* ================= タブレット以下 ================= */
+@media (max-width: 1024px) {
+  .header-inner {
+    grid-template-columns: minmax(0, 1fr) auto;
+    column-gap: 20px;
+  }
+}
+
 /* ================= スマホ ================= */
 @media (max-width: 480px) {
 
@@ -130,10 +119,9 @@ h2 {
 
   .header-inner {
     grid-template-columns: 1fr auto;
-    align-items: center;
   }
 
-  /* 会社名・サービス名は左揃え */
+  /* ロゴ・タイトル左寄せ */
   .logo,
   .header-center {
     grid-column: 1;
@@ -145,26 +133,25 @@ h2 {
     line-height: 1.3;
   }
 
-  /* ☰ は常に右 */
+  /* ☰ */
   .menu-toggle {
     display: block;
     grid-column: 2;
     justify-self: end;
   }
-  
+
+  /* メニュー本体 */
   .menu {
     position: absolute;
     top: 100%;
-    right: 0;               /* ← さらに右にピタッ */
-      width: 40%;             /* ←少し細め */
+    right: 0;
+
+    width: 40%;
     max-width: 240px;
 
     display: none !important;
-
     background: rgba(169,169,169,0.9);
     padding: 14px 16px;
-
-    border-radius: 0;       /* ← 角丸なし */
     text-align: left;
   }
 
@@ -176,14 +163,12 @@ h2 {
     display: block;
     padding: 10px 0;
     font-size: 1.05em;
-    color: #fff;
   }
 
   .menu a:not(:last-child) {
     border-bottom: 1px solid rgba(255,255,255,0.25);
   }
 }
-
 /* =================================================
    スライダー全体（外枠）
 ================================================= */
