--- a/index.html
+++ b/index.html
@@ -446,9 +446,7 @@ h2 {
   }
 }
 
-/* ===============================
-   トグル矢印（共通）
-=============================== */
+/* ================= トグル矢印（共通） ================= */
 .arrow流れ,
 .arrow料金 {
   font-family: 'Kiwi Maru', cursive;
@@ -472,14 +470,17 @@ h2 {
   max-width: 900px;
   margin: 30px auto 50px;
   padding: 25px;
+
   background: rgba(255,255,255,0.75);
   border-radius: 20px;
+
   text-align: left;
   color: #635656;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
-  @media (max-width: 480px) {
+/* ================= タイトル（スマホ） ================= */
+@media (max-width: 480px) {
   .access-title {
     display: block;
     text-align: center;
@@ -487,20 +488,17 @@ h2 {
   }
 }
 
+/* ================= 住所テキスト ================= */
 .access-text {
   position: relative;
   max-width: 550px;
   margin: 0 auto 20px;
   padding-left: 1.8em;
+
   font-size: 1.3em;
 }
 
-@media (max-width: 480px) {
-.access-text {
-  font-size: 1em;
-}
-}
-  
+/* ピンアイコン */
 .access-text::before {
   content: "📍";
   position: absolute;
@@ -509,61 +507,70 @@ h2 {
   font-size: 1.5em;
 }
 
+/* 郵便番号 */
 .zip {
   font-size: 0.9em;
 }
 
-@media (max-width: 480px) {
-  .zip {
-    font-size: 0.9em;
-  }
-}
-  
+/* 住所行間 */
 .address {
-  line-height: 1.3;    /* 行間詰め */
+  line-height: 1.3;
 }
 
-/* マップ */
+/* スマホ文字サイズ */
+@media (max-width: 480px) {
+  .access-text {
+    font-size: 1em;
+  }
+}
+
+/* ================= マップ ================= */
 .map-wrapper {
   position: relative;
+  max-width: 680px;
+  margin: 0 auto;
+
   padding-top: 56%;
   border-radius: 15px;
   overflow: hidden;
-  max-width: 680px;
-  margin: 0 auto;  
 }
 
 .map-wrapper iframe {
   position: absolute;
   top: -1px;
   left: -1px;
+
   width: calc(100% + 2px);
   height: calc(100% + 2px);
   border: 0;
   display: block;
 }
-
+  
 /* =================================================
    お問い合わせ
 ================================================= */
 .contact-cta {
   text-align: center;
   margin: 50px 0 40px;
-  display: block;
   position: relative;
   z-index: 1;
+
+  display: block;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
+/* CTAリンク */
 .contact-cta a {
   display: inline-block;
   padding: 10px 18px;
   font-size: 18px;
+
   color: #9F987D;
   background: rgba(255,255,255,0.6);
   border: 1px solid #ccc;
   border-radius: 10px;
   text-decoration: none;
+
   transition: all 0.3s ease;
 }
 
@@ -573,67 +580,76 @@ h2 {
   transform: translateY(-2px);
 }
 
-/* スマホ */
-@media (max-width: 480px) {
-  .contact-cta a {
-    width: 65%;
-    padding: 10px 5px;
-    font-size: 18px;
-  }
-}
-  
+/* ================= フォーム全体 ================= */
 .contact-form {
   display: none;
   max-width: 900px;
   margin-bottom: 0;
   padding: 0 20px;
+
   background: rgba(255,255,255,0.75);
   border-radius: 15px;
 }
-  /* iframeは常に親にフィット */
+
+.contact-form.show {
+  display: block;
+}
+
+/* iframeは親にフィット */
 .contact-form iframe {
   width: 100%;
   border: none;
 }
 
-.contact-form.show { display: block; }
-
-  @media (max-width: 480px) {
-  .contact-title {
-    display: block;
-    text-align: center;
-    margin-top: 70px;
-    margin-bottom: 20px;
-  }
-}
-
-  /* お問い合わせボタン：PC・スマホ共通 */
+/* ================= お問い合わせトグルボタン ================= */
 .toggle-button-contact {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
+
   font-size: 18px;
   padding: 10px 18px;
+  margin: 0 auto 15px;
+
   border-radius: 10px;
   border: 1px solid #ccc;
   background: rgba(255,255,255,0.6);
   color: #9F987D;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
   cursor: pointer;
-  margin: 0 auto 15px;
+
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 /* 矢印 */
 .arrow-contact {
   font-family: 'Kiwi Maru', cursive;
   font-size: 0.7em;
+
+  display: inline-block;
   transform: scaleX(2);
   transition: transform 0.4s ease;
 }
 
 .arrow-contact.rotate {
   transform: scaleX(2) rotate(180deg);
+}
+
+/* ================= スマホ調整 ================= */
+@media (max-width: 480px) {
+
+  .contact-cta a {
+    width: 65%;
+    padding: 10px 5px;
+    font-size: 18px;
+  }
+
+  .contact-title {
+    display: block;
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 20px;
+  }
 }
   
 /* =================================================
@@ -645,37 +661,41 @@ h2 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
+/* セクション間の余白 */
 .pdf-section:last-of-type {
   margin-top: 40px;
 }
 
+/* ================= PDFボタン並び（PC） ================= */
 .self-buttons {
   display: flex;
   justify-content: center;
   gap: 40px;
   flex-wrap: wrap;
 }
-  
+
+/* PDFボタン */
 .self-buttons .pdf-link {
   width: 180px;
-  aspect-ratio: auto;
-  box-sizing: border-box;
-  background: #ffffff;
-  border-radius: 16px;
-  font-size: 16px;
   padding: 22px 20px;
+
+  background: #ffffff;
   color: #9F987D;
   text-decoration: none;
-  text-align: center;
-  
+
+  border-radius: 16px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  line-height: 1.2;
 
-  border: 1px solid #ccc;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+  font-size: 16px;
+  line-height: 1.2;
+  box-sizing: border-box;
+
   transition: all 0.3s ease;
 }
 
@@ -689,24 +709,33 @@ h2 {
   transform: scale(0.96);
 }
 
+/* ================= 説明文 ================= */
 .pdf-text {
-  text-align: center;
   margin: 0 0 30px;
+  text-align: center;
+
   font-size: 16px;
   line-height: 1.8;
   color: #6f6a55;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
+/* 支援プログラムとの間隔 */
+.program {
+  margin-top: 40px;
+}
+
+/* ================= スマホ調整 ================= */
 @media (max-width: 767px) {
+
+  /* 説明文 */
   .pdf-text {
     font-size: 14px;
     margin-bottom: 20px;
     padding: 0 10px;
   }
-}
-  
-@media (max-width: 767px) {
+
+  /* スマホでは常に表示 */
   #self-content {
     display: block !important;
     opacity: 1 !important;
@@ -714,14 +743,8 @@ h2 {
     filter: none !important;
     margin-bottom: 0;
   }
-}
 
-.program {
-  margin-top: 40px;
-}
-  
-/* ===== スマホ：自己評価ボタンを縦1列 ===== */
-@media (max-width: 767px) {
+  /* ボタン縦並び */
   .self-buttons {
     display: grid;
     grid-template-columns: 1fr;
@@ -731,34 +754,47 @@ h2 {
 
   .self-buttons .pdf-link {
     width: 70%;
-    aspect-ratio: auto;
     padding: 18px 8px;
     font-size: 0.85em;
   }
 
-.contact-form,
-.pdf-section,
-.self-buttons {
-  margin-bottom: 0;
- }
+  /* 下余白リセット */
+  .contact-form,
+  .pdf-section,
+  .self-buttons {
+    margin-bottom: 0;
+  }
 }
+
 /* =================================================
    フッター
 ================================================= */
 footer {
-  background: rgba(255,255,255,0.5);
+  margin-top: auto;              /* ← 下に押し付ける要 */
   padding: 30px 15px;
+
+  background: rgba(255,255,255,0.5);
   text-align: center;
+
   font-family: 'Kiwi Maru', cursive;
   font-size: 1em;
   color: #aaa;
-  margin-top: auto;   /* ← これが超重要 */
 }
 
-/* 住所まわり */
+/* ================= フッター内リンク共通 ================= */
+.footer-info a {
+  color: #aaa;
+  text-decoration: none;
+}
+
+.footer-info a:hover {
+  text-decoration: underline;
+}
+
+/* ================= 住所・連絡先 ================= */
 .footer-address {
-  line-height: 1.6;
   margin-bottom: 15px;
+  line-height: 1.6;
   font-size: 0.9em;
 }
 
@@ -766,7 +802,6 @@ footer {
   display: inline-block;
 }
 
-/* 電話とメールの間隔 */
 .footer-tel {
   margin-right: 18px;
   font-size: 0.9em;
@@ -776,14 +811,14 @@ footer {
   font-size: 0.9em;
 }
 
-/* 下段（コピーライト・リンク） */
+/* =================  下段（コピーライト・リンク） ================= */
 .footer-copy {
   margin-top: 15px;
   font-size: 0.9em;
   color: #aaa;
 }
 
-/* プライバシーポリシーリンク */
+/* プライバシーポリシー */
 .footer-privacy,
 .footer-privacy:link,
 .footer-privacy:visited {
@@ -796,27 +831,19 @@ footer {
   text-decoration: underline;
 }
 
-  .footer-info a {
-  color: #aaa;
-  text-decoration: none;
-}
-
-.footer-info a:hover {
-  text-decoration: underline;
-}
-    
+/* ================= スマホ調整 ================= */
 @media (max-width: 768px) {
   body {
     background-attachment: scroll;
   }
 }
 
-  @media (max-width: 480px) {
+@media (max-width: 480px) {
   #pdf::before,
   .access-title::before,
   .contact-title::before,
   .pdf-title::before {
-    width: 350px;   /* ← PCより短く */
+    width: 350px;
   }
 }
   
