--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ h2 {
   .pc-title::before,
   .access-title::before,
   .contact-title::before {
-    width: 90%;
+    width: 100%;
   }
 }
   
@@ -315,7 +315,7 @@ h2 {
   }
 
   .slider {
-    width: 100vw;
+    width: 100％;
   }
 
   .slide {
