--- a/index.html
+++ b/index.html
@@ -846,6 +846,21 @@ footer {
     width: 350px;
   }
 }
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
   
 </style>
 </head>
