--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ h2 {
   padding: 0 10px 26px;
   position: relative;
 
-  overflow: hidden;
+  overflow: visible;
   background: rgba(255,255,255,0);
 }
 
