--- a/index.html
+++ b/index.html
@@ -192,14 +192,13 @@ h2 {
   content: "";
   position: absolute;
   bottom: -1px;
-  left: -30%;
-
-  width: 100%;
-  max-width: 1300px;
+  left: 0;　　　　　　　　/* 左からスタート */
+  width: 120%;
   height: 0.8em;
 
   background: rgba(169,169,169,0.25);
-  border-radius: 15px;
+
+  border-radius: 0 15px 15px 0;
   z-index: -1;
 }
 
