--- a/index.html
+++ b/index.html
@@ -895,8 +895,8 @@ body {
     </nav>
 
   </div>
-</header>
-  
+ </header>
+<main>
 <!-- ===== PC用スライダー ===== -->
 <div class="slider-section pc-only">
   <button class="slide-arrow left">〈</button>
@@ -1049,6 +1049,7 @@ body {
     <span class="footer-sep">｜</span>
     <a href="privacy.html" class="footer-privacy">プライバシーポリシー</a>
   </div>
+ </main>
 </footer>
 
 <script>
