--- a/index.html
+++ b/index.html
@@ -670,13 +670,13 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
   flex-wrap: wrap;
 }
 
 /* PDFボタン */
 .self-buttons .pdf-link {
-  width: 180px;
+  width: 200px;
   padding: 22px 20px;
 
   background: #ffffff;
@@ -711,7 +711,7 @@ h2 {
 
 /* ================= 説明文 ================= */
 .pdf-text {
-  margin: 0 0 20px;
+  margin: 15px 0 10px;
   text-align: center;
   font-size: 16px;
   line-height: 1.8;
