--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ h2 {
 
 /* PDFボタン */
 .self-buttons .pdf-link {
-  width: 200px;
+  width: 220px;
   padding: 22px 20px;
 
   background: #ffffff;
@@ -771,6 +771,22 @@ h2 {
 /* =================================================
    フッター
 ================================================= */
+.footer-bottom {
+  background-color: #333;  /* 濃い色で帯を目立たせる */
+  padding: 10px 0;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.footer-bottom a {
+  color: #fff;
+  text-decoration: none;
+}
+  
 footer {
   margin-top: auto;              /* ← 下に押し付ける要 */
   padding: 30px 15px;
