--- a/index.html
+++ b/index.html
@@ -771,27 +771,11 @@ h2 {
 /* =================================================
    フッター
 ================================================= */
-.footer-bottom {
-  background-color: #333;  /* 濃い色で帯を目立たせる */
-  padding: 10px 0;
-  color: #fff;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  flex-wrap: wrap;
-}
-
-.footer-bottom a {
-  color: #fff;
-  text-decoration: none;
-}
-  
 footer {
   margin-top: auto;              /* ← 下に押し付ける要 */
   padding: 30px 15px;
 
-  background: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.5);
   text-align: center;
 
   font-family: 'Kiwi Maru', cursive;
