--- a/index.html
+++ b/index.html
@@ -783,9 +783,13 @@ footer {
 
 /* footer-bottom を中央寄せに */
 .footer-bottom {
-  display: inline-block;  /* 横並びはそのまま残す */
+  display: flex;
+  justify-content: center; /* 横中央 */
+  align-items: center;     /* 縦中央 */
+  gap: 8px;                /* 要素間のスペース */
   margin-top: 15px;
 }
+  
 .footer-copy,
 .footer-sep,
 .footer-privacy {
