--- a/index.html
+++ b/index.html
@@ -786,6 +786,8 @@ footer {
   text-align: center;
   line-height: 1.6;
   margin-bottom: 10px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-info a {
