--- a/index.html
+++ b/index.html
@@ -783,11 +783,11 @@ footer {
 
 /* フッター住所・連絡先 */
 .footer-info {
-  text-align: center;
-  line-height: 1.6;
-  margin-bottom: 10px;
+  display: flex;
   flex-direction: column;
   align-items: center;
+  line-height: 1.6;
+  margin-bottom: 10px;
 }
 
 .footer-info a {
@@ -809,9 +809,9 @@ footer {
 /* 下段コピーライト・プライバシーリンク */
 .footer-bottom {
   display: flex;
-  justify-content: center; /* 横中央揃え */
-  align-items: center;     /* 縦中央揃え */
-  gap: 8px;                /* 要素間スペース */
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
   margin-top: 15px;
 }
 
