--- a/index.html
+++ b/index.html
@@ -781,7 +781,8 @@ footer {
 .footer-bottom {
   display: flex;
   justify-content: center;
-  gap: 6px;
+  align-items: center;
+  gap: 8px;
   flex-wrap: wrap;
 }
 
@@ -789,17 +790,13 @@ footer {
 .footer-address {
   line-height: 1.6;
   margin-bottom: 15px;
-  font-size: 0.9em;
-}
-
-.footer-address span {
-  display: inline-block;
+  font-size: 1em;
 }
   
 .footer-address a {
   color: #aaa;
   text-decoration: none;
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 .footer-address a:hover {
@@ -809,18 +806,25 @@ footer {
 /* 電話とメールの間隔 */
 .footer-tel {
   margin-right: 18px;
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 .footer-mail {
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 /* 下段コピーライト・プライバシーリンク */
 .footer-copy {
-  margin-top: 15px;
-  font-size: 0.9em;
+  font-size: 1em;
   color: #aaa;
+}
+  
+.footer-copy,
+.footer-privacy,
+.footer-sep {
+  line-height: 1.6;
+  display: inline-flex;
+  align-items: center;
 }
 
 .footer-privacy,
@@ -828,12 +832,30 @@ footer {
 .footer-privacy:visited {
   color: #aaa;
   text-decoration: none;
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 .footer-privacy:hover {
   color: #9F987D;
   text-decoration: underline;
+}
+
+/* ================= スマホ用フッター調整 ================= */
+@media (max-width: 480px) {
+
+  .footer-bottom {
+    flex-direction: column;   /* ← 縦並び */
+    gap: 4px;
+  }
+
+  .footer-sep {
+    display: none;            /* ｜ を消す */
+  }
+
+  .footer-copy,
+  .footer-privacy {
+    font-size: 0.85em;
+  }
 }
 
 /* ================= スマホ対応 ================= */
@@ -991,7 +1013,7 @@ main {
 
 <!-- ① 文章① -->
 <p class="pdf-text">
-  ・事業所における自己評価結果
+  …事業所における自己評価結果…
 </p>
 
 <!-- ボタン2個 -->
@@ -1007,7 +1029,7 @@ main {
 
 <!-- ② 文章② -->
 <p class="pdf-text">
-  ・保護者等からの事業所評価の集計結果
+  …保護者等からの事業所評価の集計結果…
 </p>
 
 <!-- ボタン2個 -->
