--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ h2 {
 ================================================= */
 .pdf-section {
   text-align: center;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
@@ -677,7 +677,7 @@ h2 {
 .self-buttons .pdf-link {
   width: 220px;
   padding: 22px 20px;
-
+  
   background: #ffffff;
   color: #9F987D;
   text-decoration: none;
@@ -714,7 +714,7 @@ h2 {
   text-align: center;
   font-size: 16px;
   line-height: 1.8;
-  color: #6f6a55;
+  color: #9F987D;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
