--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ h2 {
   margin: 15px auto 0;
   padding: 0 10px 26px;
   position: relative;
-
+  text-align: center;
   overflow: visible;
   background: rgba(255,255,255,0);
 }
