--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ h2 {
   max-width: 920px;
   width: 100%;
   margin: 15px auto 0;
-  padding: 0 10px 26px;
+  padding: 0 0 26px;
   position: relative;
   text-align: center;
   overflow: visible;
